rename package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-collapsible",
+  "name": "react-collapsible-rcpd",
   "version": "2.6.1",
   "description": "React component to wrap content in Collapsible element with trigger to open and close.",
   "keywords": [
